--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link type= "text/css" rel="stylesheet" href="eft-code-challenge.css"/>
     <title>EngageFT Coding Challenge</title>
+
+    <link type= "text/css" rel="stylesheet" href="eft-code-challenge.css"/>
+    <script src="eft-code-challenge.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="navbar-header pull-left">
+        <a id="navbar-title" href="index.html">Navbar</a>
+      </div>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Account</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Login</a>
+        </li>
+      </ul>
+    </nav>
+
     <p>Is this thing on?</p>
   </body>
 </html>
