--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       </div>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="./index.html" onclick="redirectIfLoggedIn('home'); return false;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Account</a>
+          <a class="nav-link" href="./index.html" onclick="redirectIfLoggedIn('account'); return false;">Account</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Login</a>
