dynamically inject navbar with jQuery to all pages, use html import to provide links, styles, and scripts to each page in a clean manner.

--- a/account.html
+++ b/account.html
@@ -1,1 +1,22 @@
-<p>does it work?</p>
+<html>
+  <head>
+    <link rel="import" href="head-content.html">
+  </head>
+  <body>
+    <div class="nav-container"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-10 offset-1 vertical-center">
+          <div class="card">
+            <div class="card-header">
+              <h6 class="card-text">Welcome to your account page!</h6>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Find your info below.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
