--- a/home.html
+++ b/home.html
@@ -1,12 +1,9 @@
 <html>
   <head>
-    <title>EngageFT Coding Challenge</title>
-    <link type= "text/css" rel="stylesheet" href="eft-code-challenge.css"/>
-    <script src="eft-code-challenge.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="import" href="head-content.html">
   </head>
   <body>
-
+    <div class="nav-container"></div>
     <div class="container">
       <div class="row">
         <div class="col-10 offset-1 vertical-center">
