--- a/home.html
+++ b/home.html
@@ -7,7 +7,12 @@
     <div class="container">
       <div class="row">
         <div class="col-10 offset-1 vertical-center">
-
+          <div class="alert alert-dismissable alert-success fade show" role="alert">
+            Successful login.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
           <div class="card">
             <div class="card-header">
               <h6 class="card-text">Welcome to Home!</h6>
