--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <div class="container">
       <div class="row">
         <div class="col-10 offset-1 vertical-center">
+          <div id="login-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
+            Please login to access the Home and Account pages.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div id="invalid-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
+            Login failed. Email or password is incorrect.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
           <form id="login-form">
             <h2>Login</h2>
             <div class="form-group">
@@ -17,7 +29,7 @@
               <label for="inputPassword">Password</label>
               <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
-            <button class="btn btn-primary" type="submit" onclick="return attemptLogin()">Submit</button>
+            <button id="login-button" class="btn btn-primary" onclick="return false;" type="submit">Submit</button>
           </form>
         </div>
       </div>
