--- a/account.html
+++ b/account.html
@@ -4,10 +4,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="../scripts/app.js"></script>
-    <script src="../scripts/account.js"></script>
-    <link type= "text/css" rel="stylesheet" href="../styles/app.css"/>
-    <link type= "text/css" rel="stylesheet" href="../styles/account.css"/>
+    <script src="./scripts/app.js"></script>
+    <script src="./scripts/account.js"></script>
+    <link type= "text/css" rel="stylesheet" href="./styles/app.css"/>
+    <link type= "text/css" rel="stylesheet" href="./styles/account.css"/>
   </head>
   <body>
     <div class="nav-container"></div>
