--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
               <label for="inputPassword">Password</label>
               <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
-            <button id="login-button" class="btn btn-primary" onclick="return false;" type="submit">Submit</button>
+            <button id="login-button" class="btn btn-primary" type="submit">Submit</button>
           </form>
         </div>
       </div>
