--- a/account.html
+++ b/account.html
@@ -48,7 +48,7 @@
                   </p>
                 </div>
 
-                <div class="col-xs-12 col-lg-4 embed-responsive embed-response-16by9">
+                <div class="col-xs-12 col-lg-4 embed-responsive">
                   <div class="embed-responsive-item">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3975.484365030213!2d51.0717778!3d-4.8581867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzfCsDE4JzU3LjIiUyA4McKwMDgnNTguNiJF!5e0!3m2!1sen!2sus!4v1555202310803!5m2!1sen!2sus" frameborder="0" style="border:0" allowfullscreen></iframe>
                   </div>
