consolidate alerts to single div, dynamically change inner html and color with jquery

--- a/login.html
+++ b/login.html
@@ -13,30 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-10 offset-1 vertical-center">
-          <div id="index-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
-            Please login to access the Home page.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div id="account-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
-            Please login to access the Account page.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div id="invalid-alert" class="alert alert-dismissable alert-danger fade show" role="alert">
-            Login failed. Email or password is incorrect.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div id="logout-alert" class="alert alert-dismissable alert-info fade show" role="alert">
-            You are logged out.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
+          <div id="login-alert" class="alert alert-dismissable fade show" role="alert"></div>
           <form id="login-form">
             <h2>Login</h2>
             <div class="form-group">
